Update on CSS and som HTML tasks

--- a/index.html
+++ b/index.html
@@ -28,5 +28,35 @@
             </div>
         </div>
     </div>
+
+    <div class="section1">
+       <h1 class="randomtext">Some Random information</h1>
+        <div class="ilustrations">
+            <div class="ilustration">
+                <div class="ilustr-image"></div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                </p>
+             </div>
+            <div class="ilustration">
+                <div class="ilustr-image"></div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                </p>
+            </div>
+            <div class="ilustration">
+                <div class="ilustr-image"></div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                </p>
+            </div>
+            <div class="ilustration">
+                <div class="ilustr-image"></div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
