Rough attempt at the Landing page task. Back for perfection and fix responsiveness, I dont know when

--- a/index.html
+++ b/index.html
@@ -58,5 +58,25 @@
             </div>
         </div>
     </div>
+    <div class="inspiration">
+        <p class="quote">Lorem ipsum dolor sit amet 
+            consectetur adipisicing elit. Debitis qu 
+            adipisicing elit. Debitis! adipisicing elit. Debitis
+        </p>
+        <p class="author"> ~ Ye Bae Khalil</p>
+    </div>
+    <div class="call">
+        <div class="action">
+            <div class="action-msg">
+                <h1>Click to action, it's time!</h1>
+                <p>Sign up by clicking the buttom over there</p>
+            </div>
+            <button class="signup2">Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <p>Copyright &copy The Odin Project 2025</p>
+    </div>
+
 </body>
 </html>
